[tool.poetry]
name = "repl_python3_owennewberrygithubio"
version = "0.1.0"
description = ""
authors = ["OwenNewberry <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
discord = "^1.7.3"
slots = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
